force-app/main/default/objects/Contact_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Identifiers</relationshipLabel>
        <relationshipName>Contact_Identifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GuID__c</fullName>
        <description>The actual identifier value (e.g. MOID-xxx).</description>
        <externalId>true</externalId>
        <label>GuID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Composite Key (ContactId|Type|SubType) to enforce uniqueness.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MoID</fullName>
                    <default>true</default>
                    <label>MoID</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Identifier</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>Identifier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Identifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>